# phys_sim_constrained_dynamics

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  export_video.sh  submit.sh
cpp/: CMakeLists.txt  main.cpp
cpp/basic/: CMakeLists.txt  main.cpp
cpp/basic/include/: config.hpp  log.hpp  math.hpp  option.hpp  options.hpp
cpp/basic/src/: log.cpp  math.cpp  option.cpp  options.cpp
cpp/contact/: CMakeLists.txt  main.cpp
cpp/contact/include/: box_contact_proxy.hpp  collision_detector.hpp  contact_proxy.hpp  plane_contact_proxy.hpp  point_cloud_contact_proxy.hpp  sphere_contact_proxy.hpp
cpp/contact/src/: box_contact_proxy.cpp  collision_detector.cpp  contact_proxy.cpp  plane_contact_proxy.cpp  point_cloud_contact_proxy.cpp  sphere_contact_proxy.cpp
cpp/joint/: CMakeLists.txt  main.cpp
cpp/joint/include/: binary_ball_joint.hpp  binary_hinge_joint.hpp  joint.hpp  unary_ball_joint.hpp  unary_hinge_joint.hpp  unary_translational_joint.hpp
cpp/joint/src/: binary_ball_joint.cpp  binary_hinge_joint.cpp  joint.cpp  unary_ball_joint.cpp  unary_hinge_joint.cpp  unary_translational_joint.cpp
cpp/link/: CMakeLists.txt  main.cpp
cpp/link/include/: box_link.hpp  link.hpp  sphere_link.hpp
cpp/link/src/: box_link.cpp  link.cpp  sphere_link.cpp
cpp/sim/: CMakeLists.txt  main.cpp
cpp/sim/include/: simulator.hpp
cpp/sim/src/: simulator_basic.cpp  simulator_contact.cpp  simulator_step.cpp
